--- a/wallet.v2.css
+++ b/wallet.v2.css
@@ -111,7 +111,8 @@ body {
   #page-import input[type="text"],
   #verifyQuestions input[type="text"],
   #page-transfer textarea,
-  #page-hongbao input#hbBlessing {
+  #page-hongbao input#hbMessage,
+  #page-hongbao input#hbAmount {
     font-size: 16px !important;
   }
 }
